frontend-v1/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1-service
  namespace: myproject
spec:
  type: ClusterIP
  ports:
    - name: frontend-v1
      port: 5001
      protocol: TCP
      targetPort: 8080
  selector:
    component: frontend
    version: v1
