frontend-v1/k8s/frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    component: frontend
    version: v1
  name: frontend-v1-route
  namespace: myproject
spec:
  # try this url: http://frontend-v1-route-myproject.192.168.99.101.nip.io/
  port:
    targetPort: frontend-v1
  to:
    kind: Service
    name: frontend-v1-service
    weight: 100
